==> Someone-z77/My-balance-car/MyCar/src/Drive/MK60_FTM.c <==
#include "include.h"
#include "MK60_FTM.h"

void FTM_PwmInit(FTM_Type * ftmn, FTM_CHn_e ch, uint16_t freq, uint16_t duty)
{
  	uint8_t ftm_num;

	ftm_num = FTM_GetNum(ftmn);
	
    /* 开启FTM时钟配置端口复用 */
    FTM_PinInit(ftmn, ch, 1);
    
    /* 配置FTM模块的最佳时钟 */
    uint32_t clk_hz = (bus_clk * 1000 * 1000) ;     
    uint16_t mod = (clk_hz >> 16 ) / freq ;      
    uint8_t ps = 0;
    while((mod >> ps) >= 1)             // 等 (mod >> ps) < 1 才退出 while 循环 ，即求 PS 的最小值
    {
        ps++;
    }

    if(ps>0x07) return ;               // 断言， PS 最大为 0x07 ，超过此值，则 PWM频率设置过低，或 Bus 频率过高
    mod = (clk_hz >> ps) / freq;        // 求 MOD 的值
    ftm_period[ftm_num]=mod;
    uint16_t cv = (duty * (mod - 0 + 1)) / FTM_PRECISON;
    FTM_SC_REG(ftmn)   =  FTM_SC_PS(ps) | FTM_SC_CLKS(1);
    
    /******************** 选择输出模式为 边沿对齐PWM *******************/
    //通道状态控制，根据模式来选择 边沿或电平
    FTM_CnSC_REG(ftmn, ch) &= ~FTM_CnSC_ELSA_MASK;
    FTM_CnSC_REG(ftmn, ch)  = FTM_CnSC_MSB_MASK | FTM_CnSC_ELSB_MASK;
   // FTM_MODE_REG(FTMN[ftmn])&=~1;
    FTM_MOD_REG(ftmn)   = mod;                        //模数, EPWM的周期为 ：MOD - CNTIN + 0x0001
    FTM_CNTIN_REG(ftmn) = 0;                          //计数器初始化值。设置脉冲宽度：(CnV - CNTIN).
    FTM_CnV_REG(ftmn, ch) = cv;
    FTM_CNT_REG(ftmn)   = 0;                          //计数器。只有低16位可用（写任何值到此寄存器，都会加载 CNTIN 的值）
}

void FTM_PwmDuty(FTM_Type * ftmn, FTM_CHn_e ch, u16 duty)
{ 
	uint8_t ftm_num;

	ftm_num = FTM_GetNum(ftmn);
	
    uint32_t mod = ftm_period[ftm_num];
    uint16_t cv = (duty * (mod - 0 + 1)) / FTM_PRECISON;
    // 配置FTM通道值
    FTM_CnV_REG(ftmn, ch) = cv;

}

void FTM_ABInit(FTM_Type * ftmn)
{
   /* 开启FTM时钟配置端口复用 */
    FTM_PinInit(ftmn, FTM_CH0, 0);

	
    FTM_MODE_REG(ftmn)  |=    (0
                                     | FTM_MODE_WPDIS_MASK  //写保护禁止
                                     //| FTM_MODE_FTMEN_MASK   //使能 FTM
                                    );
    FTM_QDCTRL_REG(ftmn) |=   (0
                                    | FTM_QDCTRL_QUADMODE_MASK
                                     );
    FTM_CNTIN_REG(ftmn)   = 0;
    FTM_MOD_REG(ftmn)     = FTM_MOD_MOD_MASK;
    FTM_QDCTRL_REG(ftmn) |=   (0
                                    | FTM_QDCTRL_QUADEN_MASK
                                     );
    FTM_MODE_REG(ftmn)  |= FTM_QDCTRL_QUADEN_MASK;;
    FTM_CNT_REG(ftmn)     = 0;                    //计数器。只有低16位可用（写任何值到此寄存器，都会加载 CNTIN 的值）
    
}

short FTM_ABGet(FTM_Type * ftmn)
{
    short val;
   
    val = FTM_CNT_REG(ftmn);
    
    FTM_CNT_REG(ftmn) = 0;             

    return val;
}
