==> link-750/stm32_F1/stm32_f1_compelete_project/stm32f1实现模拟spi/ccd/src/Source/FTM.c <==
#include "include.h"
#include "FTM.h"

void FTM_PWM_Init(FTMn_e ftmn, FTM_CHn_e ch, u16 mod, u16 cv)
{
  
  /******************* 开启时钟 和 复用IO口*******************/
    switch(ftmn)
    {
    case FTM0:
        SIM_SCGC6 |= SIM_SCGC6_FTM0_MASK;       //使能FTM0时钟
            /******************** 配置时钟和分频 ********************/
        FTM_SC_REG(FTMN[ftmn])    = ( 0
                                    | FTM_SC_PS(0)             //分频  0   频率为  1.37khz
                                    | FTM_SC_CLKS(1)            //时钟选择，bus时钟  
                                     );
        switch(ch)
        {
        case FTM_CH0:
            if(FTM0_CH0 == PTC1)
            {
              
                PORTC_PCR1= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH0 == PTA3)
            {
              
                PORTA_PCR3= PORT_PCR_MUX(3); 
            }
            else
            {
                 break;
            }
            break;

        case FTM_CH1:
            if(FTM0_CH1 == PTC2)
            {
               // port_init(FTM0_CH1, ALT4);
                PORTC_PCR2= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH1 == PTA4)
            {
              
                PORTA_PCR4= PORT_PCR_MUX(3); 
            }
            else
            {
                 break;
            }
            break;

        case FTM_CH2:
            if(FTM0_CH2 == PTC3)
            {
              
                PORTC_PCR3= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH2 == PTA5)
            {
              
                PORTA_PCR5= PORT_PCR_MUX(3); 
            }
            else
            {
                 break;
            }
            break;

        case FTM_CH3:
            if(FTM0_CH3 == PTC4)
            {
             
                PORTC_PCR4= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH3 == PTA6)
            {
              
                PORTA_PCR6= PORT_PCR_MUX(3); 
            }
            else
            {
                break;
            }
            break;

        case FTM_CH4:
            if(FTM0_CH4 == PTD4)
            {
              
                PORTD_PCR4= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH4 == PTA7)
            {
             
                PORTA_PCR7= PORT_PCR_MUX(3); 
            }
            else
            {
               break;
            }
            break;

        case FTM_CH5:
            if(FTM0_CH5 == PTD5)
            {
             
                PORTD_PCR5= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH5 == PTA0)
            {
              
                PORTA_PCR0= PORT_PCR_MUX(3); 
            }
            else
            {
                 break;
            }
            break;

        case FTM_CH6:
            if(FTM0_CH6 == PTD6)
            {
             
                PORTD_PCR6= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH6 == PTA1)
            {
             
                PORTA_PCR1= PORT_PCR_MUX(3); 
            }
            else
            {
                break;
            }
            break;

        case FTM_CH7:
            if(FTM0_CH7 == PTD7)
            {
              
                PORTD_PCR7= PORT_PCR_MUX(4); 
            }
            else if(FTM0_CH7 == PTA2)
            {
             
                PORTA_PCR2= PORT_PCR_MUX(3); 
            }
            else
            {
               break;
            }
            break;
        default:
            return;
        }
        break;

    case FTM1:
        SIM_SCGC6 |= SIM_SCGC6_FTM1_MASK;       //使能FTM1时钟
       /******************** 配置时钟和分频 ********************/
        FTM_SC_REG(FTMN[ftmn])    = ( 0
                                    | FTM_SC_PS(0)             //分频  0   频率为  1.37khz
                                    | FTM_SC_CLKS(1)            //时钟选择，bus时钟  
                                     );
        switch(ch)
        {
        case FTM_CH0:
            if(FTM1_CH0 == PTA8)
            {
               
                PORTA_PCR8= PORT_PCR_MUX(3); 
            }
            else if(FTM1_CH0 == PTA12)
            {
                PORTA_PCR12= PORT_PCR_MUX(3); 
            }
            else if(FTM1_CH0 == PTB0)
            {
                PORTB_PCR0= PORT_PCR_MUX(3); 
            }
            break;


        case FTM_CH1:
            if(FTM1_CH1 == PTA9) 
            {
               
                PORTA_PCR9= PORT_PCR_MUX(3); 
            }
            else if(FTM1_CH1 == PTA13)
            {
                PORTA_PCR13= PORT_PCR_MUX(3); 
            }
              else if(FTM1_CH1 == PTB1)
            {
                PORTB_PCR1= PORT_PCR_MUX(3); 
            }
            break;

        default:
            return;
        }
        break;

    case FTM2:
        SIM_SCGC3 |= SIM_SCGC3_FTM2_MASK;                           //使能FTM2时钟
       /******************** 配置时钟和分频 ********************/
        FTM_SC_REG(FTMN[ftmn])    = ( 0
                                    | FTM_SC_PS(0)             //分频  0   频率为  1.37khz
                                    | FTM_SC_CLKS(1)            //时钟选择，bus时钟  
                                     );
        switch(ch)
        {
        case FTM_CH0:
            if(FTM2_CH0 == PTA10)
            {
              
                PORTA_PCR10= PORT_PCR_MUX(3); 
            }
            else if(FTM2_CH0 == PTB18)
            {
                PORTB_PCR18= PORT_PCR_MUX(3); 
            }
            break;

        case FTM_CH1:
            if(FTM2_CH1 == PTA11) 
            {
             
                PORTA_PCR11= PORT_PCR_MUX(3); 
            }
            else if(FTM2_CH1 == PTB19)
            {
                PORTB_PCR19= PORT_PCR_MUX(3); 
            }
            break;

        default:
            return;
        }
        break;
    default:
        break;
    }


    /******************** 选择输出模式为 边沿对齐PWM *******************/
    //通道状态控制，根据模式来选择 边沿或电平
    FTM_CnSC_REG(FTMN[ftmn], ch) &= ~FTM_CnSC_ELSA_MASK;
    FTM_CnSC_REG(FTMN[ftmn], ch)  = FTM_CnSC_MSB_MASK | FTM_CnSC_ELSB_MASK;
   // FTM_MODE_REG(FTMN[ftmn])&=~1;
    FTM_MOD_REG(FTMN[ftmn])   = mod;                        //模数, EPWM的周期为 ：MOD - CNTIN + 0x0001
    FTM_CNTIN_REG(FTMN[ftmn]) = 0;                          //计数器初始化值。设置脉冲宽度：(CnV - CNTIN).
    FTM_CnV_REG(FTMN[ftmn], ch) = cv;
    FTM_CNT_REG(FTMN[ftmn])   = 0;                          //计数器。只有低16位可用（写任何值到此寄存器，都会加载 CNTIN 的值）
}

void FTM_PWM_Duty(FTMn_e ftmn, FTM_CHn_e ch, u16 duty)
{
 
    FTM_CnV_REG(FTMN[ftmn], ch) = duty;

}

void FTM_AB_Init(FTMn_e ftmn)
{
   

    /******************* 开启时钟 和 复用IO口*******************/
    switch(ftmn)
    {

    case FTM1:
        SIM_SCGC6 |= SIM_SCGC6_FTM1_MASK;       //使能FTM1时钟
        if(FTM1_QDPHA == PTA8)                  //管脚复用
        {
          
             PORTA_PCR8= PORT_PCR_MUX(6);
        }
        else if(FTM1_QDPHA == PTA12)
        {
           
             PORTA_PCR12= PORT_PCR_MUX(7);
        }
        else if(FTM1_QDPHA == PTB0)
        {
         
             PORTB_PCR0= PORT_PCR_MUX(6);
        }
        else
        {
             break;
        }

        if(FTM1_QDPHB == PTA9)
        {
         
             PORTA_PCR9= PORT_PCR_MUX(6);
        }
        else if(FTM1_QDPHB == PTA13)
        {
        
             PORTA_PCR13= PORT_PCR_MUX(7);
        }
        else if(FTM1_QDPHB == PTB1)
        {
         
             PORTB_PCR1= PORT_PCR_MUX(6);
        }
        else
        {
            break;
        }
        break;
       

    case FTM2:
        SIM_SCGC3 |= SIM_SCGC3_FTM2_MASK;                           //使能FTM2时钟
        if(FTM2_QDPHA == PTA10)                  //管脚复用
        {
        
             PORTA_PCR10= PORT_PCR_MUX(6);
        }
        else if(FTM2_QDPHA == PTB18)
        {
         
             PORTB_PCR18= PORT_PCR_MUX(6);
        }
        else
        {
            break;
        }

        if(FTM2_QDPHB == PTA11)                  //管脚复用
        {
          
             PORTA_PCR11= PORT_PCR_MUX(6);
        }
        else if(FTM2_QDPHB == PTB19)
        {
        
             PORTB_PCR19= PORT_PCR_MUX(6);
        }
        else
        {
             break;    
        }break;
    }

    FTM_MODE_REG(FTMN[ftmn])  |=    (0
                                     | FTM_MODE_WPDIS_MASK  //写保护禁止
                                     //| FTM_MODE_FTMEN_MASK   //使能 FTM
                                    );
    FTM_QDCTRL_REG(FTMN[ftmn]) |=   (0
                                    | FTM_QDCTRL_QUADMODE_MASK
                                     );
    FTM_CNTIN_REG(FTMN[ftmn])   = 0;
    FTM_MOD_REG(FTMN[ftmn])     = FTM_MOD_MOD_MASK;
    FTM_QDCTRL_REG(FTMN[ftmn]) |=   (0
                                    | FTM_QDCTRL_QUADEN_MASK
                                     );
    FTM_MODE_REG(FTMN[ftmn])  |= FTM_QDCTRL_QUADEN_MASK;;
    FTM_CNT_REG(FTMN[ftmn])     = 0;                    //计数器。只有低16位可用（写任何值到此寄存器，都会加载 CNTIN 的值）
    
}

int16 FTM_AB_Get(FTMn_e ftmn)
{
    int16 val;
   
    val = FTM_CNT_REG(FTMN[ftmn]);
    
    FTM_CNT_REG(FTMN[ftmn]) = 0;             

    return val;
}
